update content and data

--- a/data/cities/hattiesburg/dandy-dans.yml
+++ b/data/cities/hattiesburg/dandy-dans.yml
@@ -1,11 +1,11 @@
-id: 318523900
+id: 546213640
 type: way
-latitude: 31.32228
-longitude: -89.36798
+latitude: 31.36276
+longitude: -89.35152
 postcode: "39402"
 city: Hattiesburg
-street: "Hardy Street"
-housenumber: 5000
+street: "US 49"
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
