--- a/data/cities/madison/office-depot.yml
+++ b/data/cities/madison/office-depot.yml
@@ -8,4 +8,4 @@ street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
-website: "https://www.officedepot.com/"
+website: "https://www.officedepot.com/storelocator/ms/madison/office-depot-2761"
