--- a/data/cities/oxford/office-depot.yml
+++ b/data/cities/oxford/office-depot.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2535
 phone: "1 662 238 2606"
 opening_hours: ""
-website: "https://www.officedepot.com/"
+website: ""
