--- a/data/cities/petal/dollar-general.yml
+++ b/data/cities/petal/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 621264014
+id: 663589157
 type: way
-latitude: 31.35114
-longitude: -89.20081
+latitude: 31.33447
+longitude: -89.2637
 postcode: "39465"
 city: Petal
-street: "MS 42"
-housenumber: 1193
-phone: "+1 (601) 582-0861"
-opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.dollargeneral.com/store-directory/ms/petal/6372"
+street: "South Main Street"
+housenumber: 748
+phone: "+1 (601) 582-8146"
+opening_hours: "Mo-Su 07:00-22:00"
+website: "https://www.dollargeneral.com/store-directory/ms/petal/884"
