update content and data

--- a/data/cities/petal/oreilly-auto-parts.yml
+++ b/data/cities/petal/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "West Central Avenue"
 housenumber: 108
 phone: "+1 (601) 544-3008"
 opening_hours: "Mo-Sa 07:00-21:00; Su 08:00-20:00"
-website: "https://www.oreillyauto.com/"
+website: "https://locations.oreillyauto.com/ms/petal/autoparts-1188.html"
