--- a/data/cities/waveland/oreilly-auto-parts.yml
+++ b/data/cities/waveland/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Highway 90"
 housenumber: 461
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/ms/waveland/autoparts-1040.html"
