--- a/data/cities/ellisville/oreilly-auto-parts.yml
+++ b/data/cities/ellisville/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Bailey Avenue"
 housenumber: 909
 phone: "+1 (601) 477-3527"
 opening_hours: "Mo-Sa 07:00-21:00; Su 08:00-19:00"
-website: ""
+website: "https://locations.oreillyauto.com/ms/ellisville/autoparts-2119.html"
