--- a/data/cities/tupelo/becker-hearing-center.yml
+++ b/data/cities/tupelo/becker-hearing-center.yml
@@ -4,8 +4,8 @@ latitude: 34.25478
 longitude: -88.74746
 postcode: "38801"
 city: Tupelo
-street: "2601 W Main St, #C"
+street: "West Main Street"
 housenumber: 
 phone: "662-842-6325"
-opening_hours: "Monday-Thursday: 8:30AM to 4:30PM,Friday: 8:30AM to 12:00PM"
+opening_hours: "Mo-Th 08:30-16:30,Fr 08:30-12:00"
 website: "https://beckerhearing.com"
