--- a/data/cities/florence/courtneys-hardware.yml
+++ b/data/cities/florence/courtneys-hardware.yml
@@ -1,7 +1,7 @@
-id: 9923645213
-type: node
-latitude: 32.15289
-longitude: -90.1313
+id: 1272043329
+type: way
+latitude: 32.15297
+longitude: -90.13134
 postcode: "39073"
 city: Florence
 street: "South Church Street"
