--- a/data/cities/ridgeland/champs-sports.yml
+++ b/data/cities/ridgeland/champs-sports.yml
@@ -8,4 +8,4 @@ street: "East County Line Road"
 housenumber: 1200
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.champssports.com/ms/ridgeland/1200-e-county-lne-rd-14355.html"
