--- a/data/cities/diberville/sleep-king.yml
+++ b/data/cities/diberville/sleep-king.yml
@@ -4,7 +4,7 @@ latitude: 30.45952
 longitude: -88.89582
 postcode: "39540"
 city: D'Iberville
-street: "Sangani Blvd"
+street: "Sangani Boulevard"
 housenumber: 3680
 phone: "+1-228-354-0003"
 opening_hours: ""
