--- a/data/cities/hattiesburg/walmart-supercenter.yml
+++ b/data/cities/hattiesburg/walmart-supercenter.yml
@@ -1,10 +1,10 @@
 id: 193114801
 type: way
-latitude: 31.31906
-longitude: -89.37918
+latitude: 31.31907
+longitude: -89.37927
 postcode: "39402"
 city: Hattiesburg
-street: "U South Highway 98"
+street: "US 98"
 housenumber: 6072
 phone: "+1-601-261-9393"
 opening_hours: "24/7"
