update content and data

--- a/data/cities/laurel/pats-florist-and-gifts.yml
+++ b/data/cities/laurel/pats-florist-and-gifts.yml
@@ -8,4 +8,4 @@ street: "North 16th Avenue"
 housenumber: 316
 phone: "601 498 8295"
 opening_hours: "Mo-Sa 09:00-17:00"
-website: "patsfloristgifts.com"
+website: "https://patsfloristgifts.com/"
