--- a/data/cities/southaven/3rd-generation-tire-and-service.yml
+++ b/data/cities/southaven/3rd-generation-tire-and-service.yml
@@ -1,7 +1,7 @@
-id: 4454787030
-type: node
-latitude: 34.99284
-longitude: -90.02287
+id: 1293283530
+type: way
+latitude: 34.99292
+longitude: -90.02243
 postcode: "38671"
 city: Southaven
 street: "Highway 51 N"
