--- a/data/cities/cleveland/aarons.yml
+++ b/data/cities/cleveland/aarons.yml
@@ -7,5 +7,5 @@ city: Cleveland
 street: "North Davis Avenue"
 housenumber: 701
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Fr 10:00-19:00; Sa 10:00-18:00; Su closed"
+website: "https://locations.aarons.com/us/ms/cleveland/701a-n-davis-ave"
