--- a/data/cities/ellisville/southern-blingz.yml
+++ b/data/cities/ellisville/southern-blingz.yml
@@ -8,4 +8,4 @@ street: "North Deason Street"
 housenumber: 102
 phone: "+1-601-477-1962"
 opening_hours: ""
-website: "http://southernblingz.com"
+website: "https://southernblingz.com/"
