update content and data

--- a/data/cities/biloxi/the-home-depot.yml
+++ b/data/cities/biloxi/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "39532"
 city: Biloxi
 street: "Monroe Boulevard"
 housenumber: 1680
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 228-354-8872"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/biloxi/ms/biloxi/39532/2910"
