--- a/data/cities/brookhaven/harbor-freight-tools.yml
+++ b/data/cities/brookhaven/harbor-freight-tools.yml
@@ -6,6 +6,6 @@ postcode: "39601"
 city: Brookhaven
 street: "Brookway Boulevard"
 housenumber: 964
-phone: ""
+phone: "+1 601-748-7070"
 opening_hours: "Mo-Sa 08:00-20:00; Su 09:00-18:00"
-website: ""
+website: "https://www.harborfreight.com/storelocator/964-brookway-blvd-brookhaven-39601?number=3073"
