--- a/data/cities/madison/best-buy.yml
+++ b/data/cities/madison/best-buy.yml
@@ -6,6 +6,6 @@ postcode: "39110"
 city: Madison
 street: "Grand View Boulevard"
 housenumber: 175
-phone: "+1-601-607-1503"
+phone: "+1 601-607-1503"
 opening_hours: "Mo 10:00-19:00; Tu-Sa 10:00-21:00; Su 11:00-20:00"
-website: "http://www.bestbuy.com/"
+website: "https://stores.bestbuy.com/ms/madison/175-grandview-blvd-1519.html"
