--- a/data/cities/brandon/the-home-depot.yml
+++ b/data/cities/brandon/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "39042"
 city: Brandon
 street: "Orleans Way"
 housenumber: 200
-phone: "+1-601-825-1427"
-opening_hours: ""
+phone: "+1 601-825-1427"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
 website: "https://www.homedepot.com/l/Brandon-MS/MS/Brandon/39042/2907"
