--- a/data/cities/clinton/the-home-depot.yml
+++ b/data/cities/clinton/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "39056"
 city: Clinton
 street: "Hampstead Boulevard"
 housenumber: 5000
-phone: "+1-601-924-1332"
-opening_hours: ""
+phone: "+1 601-924-1332"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
 website: "https://www.homedepot.com/l/Clinton-MS/MS/Clinton/39056/2917"
