--- a/data/cities/gulfport/the-home-depot.yml
+++ b/data/cities/gulfport/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "39503"
 city: Gulfport
 street: "Creosote Road"
 housenumber: 15220
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 228-867-9925"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/gulfport/ms/gulfport/39503/2901"
