--- a/data/cities/hattiesburg/the-home-depot.yml
+++ b/data/cities/hattiesburg/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: "O'Ferral Street"
 housenumber: 4100
-phone: "(601) 296-1098"
-opening_hours: ""
-website: ""
+phone: "+1 601-296-1098"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/hattiesburg/ms/hattiesburg/39402/2905"
