--- a/data/cities/horn-lake/the-home-depot.yml
+++ b/data/cities/horn-lake/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "38637"
 city: Horn Lake
 street: "Interstate Boulevard"
 housenumber: 7260
-phone: "+1-662-349-6080"
-opening_hours: ""
+phone: "+1 662-349-6080"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
 website: "https://www.homedepot.com/l/Southaven/MS/Horn-Lake/38637/2903"
