--- a/data/cities/jackson/the-home-depot.yml
+++ b/data/cities/jackson/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "39213"
 city: Jackson
 street: "I-55 North"
 housenumber: 6325
-phone: "+1-601-952-0740"
-opening_hours: ""
+phone: "+1 601-952-0740"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-20:00"
 website: "https://www.homedepot.com/l/Ne-Jackson/MS/Jackson/39213/2902"
