--- a/data/cities/madison/the-home-depot.yml
+++ b/data/cities/madison/the-home-depot.yml
@@ -2,10 +2,10 @@ id: 261050106
 type: way
 latitude: 32.4764
 longitude: -90.14515
-postcode: ""
+postcode: "39110"
 city: Madison
-street: ""
-housenumber: 
-phone: ""
-opening_hours: ""
-website: ""
+street: "Colony Way"
+housenumber: 211
+phone: "+1 601-856-4660"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/madison-ms/ms/madison/39110/2912"
