--- a/data/cities/oxford/the-home-depot.yml
+++ b/data/cities/oxford/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: "Home Depot Drive"
 housenumber: 201
-phone: "1 662 234 7863"
-opening_hours: ""
-website: "https://www.homedepot.com/"
+phone: "+1 662-234-7863"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/oxford/ms/oxford/38655/2914"
