update content and data

--- a/data/cities/state-line/revettes-true-value-hardware.yml
+++ b/data/cities/state-line/revettes-true-value-hardware.yml
@@ -6,6 +6,6 @@ postcode: "39362"
 city: State Line
 street: "Main Street"
 housenumber: 243
-phone: "+1 (601) 848-7902"
+phone: "+1 601-848-7902"
 opening_hours: "Mo-Sa 08:00-17:00"
 website: "https://ww3.truevalue.com/revettes/Home.aspx"
