--- a/data/cities/ellisville/alexanders-true-value-hardware.yml
+++ b/data/cities/ellisville/alexanders-true-value-hardware.yml
@@ -6,6 +6,6 @@ postcode: "39437"
 city: Ellisville
 street: "Hill Street"
 housenumber: 803
-phone: "+1 (601) 477-3312"
+phone: "+1 601-477-3312"
 opening_hours: "Mo-Fr 07:00-17:00; Sa 07:00-12:00"
 website: "http://ww3.truevalue.com/alexandertruevalue/Home.aspx"
