--- a/data/cities/madison/petco.yml
+++ b/data/cities/madison/petco.yml
@@ -5,7 +5,7 @@ longitude: -90.13534
 postcode: "39110"
 city: Madison
 street: "Grand View Boulevard"
-housenumber: 
-phone: ""
-opening_hours: ""
-website: ""
+housenumber: 175
+phone: "+1 601-605-9844"
+opening_hours: "Mo-Sa 09:00-20:00; Su 10:00-19:00"
+website: "https://stores.petco.com/ms/madison/pet-supplies-madison-ms-1553.html"
