update content and data

--- a/data/cities/bruce/true-value.yml
+++ b/data/cities/bruce/true-value.yml
@@ -8,4 +8,4 @@ street: "Bailey Alley"
 housenumber: 101
 phone: "+1 662-983-2340"
 opening_hours: ""
-website: "http://www.truevalue.com/tedfordtruevalue"
+website: "https://www.truevalue.com/tedfordtruevalue"
