--- a/data/cities/water-valley/true-value.yml
+++ b/data/cities/water-valley/true-value.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 421
 phone: "+1 662-473-1711"
 opening_hours: ""
-website: "http://www.truevalue.com/sartainstruevalue"
+website: "https://www.truevalue.com/sartainstruevalue"
