update content and data

--- a/data/cities/gulfport/sams-club.yml
+++ b/data/cities/gulfport/sams-club.yml
@@ -4,8 +4,8 @@ latitude: 30.43927
 longitude: -89.10195
 postcode: "39503"
 city: Gulfport
-street: "Old Hwy 49"
+street: "Old Highway 49"
 housenumber: 10431
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 228-832-4441"
+opening_hours: "Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
+website: "https://www.samsclub.com/club/gulfport-ms-sams-club/8236"
