--- a/data/cities/madison/office-depot.yml
+++ b/data/cities/madison/office-depot.yml
@@ -4,8 +4,8 @@ latitude: 32.46666
 longitude: -90.12941
 postcode: "39110"
 city: Madison
-street: ""
-housenumber: 
-phone: ""
-opening_hours: ""
+street: "Grandview Boulevard"
+housenumber: 120
+phone: "+1 601-898-8854"
+opening_hours: "Mo-Fr 08:00-21:00; Sa 09:00-19:00; Su 10:00-18:00"
 website: "https://www.officedepot.com/storelocator/ms/madison/office-depot-2761"
