--- a/data/cities/hattiesburg/sams-club.yml
+++ b/data/cities/hattiesburg/sams-club.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: "US 98"
 housenumber: 6080
-phone: "+1 (601) 261-2171"
+phone: "+1 601-261-2171"
 opening_hours: "Su-Mo 10:00-18:00; Tu-Fr 10:00-20:00; Sa 09:00-20:00"
-website: ""
+website: "https://www.samsclub.com/club/hattiesburg-ms-sams-club/6503"
