--- a/data/cities/oxford/office-depot.yml
+++ b/data/cities/oxford/office-depot.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: "Jackson Avenue West"
 housenumber: 2535
-phone: "1 662 238 2606"
+phone: "+1 662-238-2606"
 opening_hours: ""
 website: ""
