update content and data

--- a/data/cities/laurel/dollar-general.yml
+++ b/data/cities/laurel/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 906694528
+id: 1164654173
 type: way
-latitude: 31.69528
-longitude: -89.21001
+latitude: 31.69606
+longitude: -88.98848
 postcode: "39443"
 city: Laurel
-street: "Indian Springs Road"
-housenumber: 4644
-phone: ""
-opening_hours: ""
-website: "https://www.dollargeneral.com/store-directory/ms/laurel/10018"
+street: "Holifield Road"
+housenumber: 205
+phone: "+1 (601) 283-4903"
+opening_hours: "Mo-Su 09:00-21:00"
+website: "https://www.dollargeneral.com/store-directory/ms/laurel/15868"
