--- a/data/cities/columbia/walmart-supercenter.yml
+++ b/data/cities/columbia/walmart-supercenter.yml
@@ -1,10 +1,10 @@
-id: 5315602235
-type: node
-latitude: 31.24398
-longitude: -89.81342
+id: 1017731716
+type: way
+latitude: 31.24331
+longitude: -89.81357
 postcode: "39429"
 city: Columbia
-street: "Highway 98 Bypass"
+street: "Highway 98"
 housenumber: 1001
 phone: "+1 601-731-1193"
 opening_hours: "Mo-Su 06:00-01:00"
