update content and data

--- a/data/cities/biloxi/walmart-supercenter.yml
+++ b/data/cities/biloxi/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315602279
-type: node
-latitude: 30.39233
-longitude: -88.99501
+id: 291851569
+type: way
+latitude: 30.39266
+longitude: -88.99426
 postcode: "39531"
 city: Biloxi
 street: "Court Switzer Sr Drive"
