--- a/data/cities/clarksdale/walmart-supercenter.yml
+++ b/data/cities/clarksdale/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 530861023
+id: 931124223
 type: way
-latitude: 34.18125
-longitude: -90.59294
+latitude: 34.18075
+longitude: -90.59134
 postcode: "38614"
 city: Clarksdale
 street: "South State Street"
 housenumber: 1000
 phone: "+1 662-627-1133"
-opening_hours: "Mo-Su 06:00-23:00"
+opening_hours: ""
 website: "https://www.walmart.com/store/707/clarksdale-ms/whats-new"
