update content and data

--- a/data/cities/batesville/walmart-supercenter.yml
+++ b/data/cities/batesville/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 4795063868
-type: node
-latitude: 34.30767
-longitude: -89.9164
+id: 1311905654
+type: way
+latitude: 34.30773
+longitude: -89.91728
 postcode: "38606"
 city: Batesville
 street: "House-Carlson Drive"
