--- a/data/cities/gulfport/walmart-supercenter.yml
+++ b/data/cities/gulfport/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 4373806540
-type: node
-latitude: 30.42324
-longitude: -89.0886
+id: 166070494
+type: way
+latitude: 30.42404
+longitude: -89.08896
 postcode: "39503"
 city: Gulfport
 street: "Highway 49"
