--- a/data/cities/hazlehurst/walmart-supercenter.yml
+++ b/data/cities/hazlehurst/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315594651
-type: node
-latitude: 31.87142
-longitude: -90.40934
+id: 1131222560
+type: way
+latitude: 31.87192
+longitude: -90.40996
 postcode: "39083"
 city: Hazlehurst
 street: "Lake Street"
