--- a/data/cities/kosciusko/walmart-supercenter.yml
+++ b/data/cities/kosciusko/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315599538
-type: node
-latitude: 33.0549
-longitude: -89.56695
+id: 1311908856
+type: way
+latitude: 33.05527
+longitude: -89.5676
 postcode: "39090"
 city: Kosciusko
 street: "Veterans Memorial Drive"
