--- a/data/cities/philadelphia/walmart-supercenter.yml
+++ b/data/cities/philadelphia/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315600728
-type: node
-latitude: 32.76752
-longitude: -89.12756
+id: 646812055
+type: way
+latitude: 32.76805
+longitude: -89.12727
 postcode: "39350"
 city: Philadelphia
 street: "West Beacon Street"
