--- a/data/cities/pontotoc/walmart-supercenter.yml
+++ b/data/cities/pontotoc/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315601359
-type: node
-latitude: 34.2856
-longitude: -89.02135
+id: 1311789920
+type: way
+latitude: 34.28611
+longitude: -89.0209
 postcode: "38863"
 city: Pontotoc
 street: "McCord Road"
