--- a/data/cities/senatobia/walmart-supercenter.yml
+++ b/data/cities/senatobia/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315601398
-type: node
-latitude: 34.62937
-longitude: -89.97189
+id: 1130670551
+type: way
+latitude: 34.62997
+longitude: -89.97148
 postcode: "38668"
 city: Senatobia
 street: "Highway 51 North"
