--- a/data/cities/louisville/walmart-supercenter.yml
+++ b/data/cities/louisville/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315600801
-type: node
-latitude: 33.12226
-longitude: -89.08271
+id: 1311906553
+type: way
+latitude: 33.12276
+longitude: -89.08315
 postcode: "39339"
 city: Louisville
 street: "Highway 15 South"
