--- a/data/cities/natchez/walmart-supercenter.yml
+++ b/data/cities/natchez/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315594680
-type: node
-latitude: 31.5534
-longitude: -91.37178
+id: 1311912778
+type: way
+latitude: 31.55436
+longitude: -91.37176
 postcode: "39120"
 city: Natchez
 street: "Sgt. S. Prentiss"
