--- a/data/cities/west-point/walmart-supercenter.yml
+++ b/data/cities/west-point/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315602243
-type: node
-latitude: 33.58666
-longitude: -88.66191
+id: 1311909557
+type: way
+latitude: 33.58702
+longitude: -88.66255
 postcode: "39773"
 city: West Point
 street: "Highway 45 Alt South"
