--- a/data/cities/hattiesburg/circle-k.yml
+++ b/data/cities/hattiesburg/circle-k.yml
@@ -1,11 +1,11 @@
-id: 750986056
+id: 542693914
 type: node
-latitude: 31.37869
-longitude: -89.36495
+latitude: 31.2567
+longitude: -89.33843
 postcode: "39402"
 city: Hattiesburg
-street: US 49
-housenumber: "7060"
-phone: +1 (601) 268-2099
+street: US 11
+housenumber: "4050"
+phone: ""
 opening_hours: 24/7
-website: https://www.circlek.com/store-locator/US/hattiesburg/7060-hwy-49-n/2723385
+website: ""
