--- a/data/cities/hattiesburg/sullivans-grocery.yml
+++ b/data/cities/hattiesburg/sullivans-grocery.yml
@@ -1,11 +1,11 @@
-id: 643943844
+id: 543578946
 type: node
-latitude: 31.31678
-longitude: -89.28458
+latitude: 31.33531
+longitude: -89.29958
 postcode: "39401"
 city: Hattiesburg
-street: James Street
-housenumber: "810"
-phone: +1 (601) 583-3441
+street: North Main Street
+housenumber: "1224"
+phone: +1 (601) 582-7615
 opening_hours: Mo-Su 07:00-20:00
-website: http://sullivansgroc.com/
+website: https://sullivansgroc.com/hattiesburg-ms-main/
