--- a/data/cities/oxford/five-below.yml
+++ b/data/cities/oxford/five-below.yml
@@ -8,4 +8,4 @@ street: Merchants Drive
 housenumber: "700"
 phone: +1-662-234-4812
 opening_hours: ""
-website: https://www.fivebelow.com/
+website: https://locations.fivebelow.com/ms/oxford/2600-jackson-avenue-west
