--- a/data/cities/oxford/my-oxford-storage.yml
+++ b/data/cities/oxford/my-oxford-storage.yml
@@ -1,11 +1,11 @@
-id: 5760371996
+id: 5745572212
 type: node
-latitude: 34.33619
-longitude: -89.55321
+latitude: 34.34857
+longitude: -89.45371
 postcode: "38655"
 city: Oxford
-street: ""
-housenumber: "192"
+street: Highway 6 East
+housenumber: "347"
 phone: ""
 opening_hours: ""
 website: ""
