update content and data

--- a/data/cities/oxford/my-oxford-storage.yml
+++ b/data/cities/oxford/my-oxford-storage.yml
@@ -1,11 +1,11 @@
-id: 5745572212
+id: 5760371996
 type: node
-latitude: 34.34857
-longitude: -89.45371
+latitude: 34.33619
+longitude: -89.55321
 postcode: "38655"
 city: Oxford
-street: Highway 6 East
-housenumber: "347"
+street: ""
+housenumber: "192"
 phone: ""
 opening_hours: ""
 website: ""
