update content and data

--- a/data/cities/horn-lake/snapbox.yml
+++ b/data/cities/horn-lake/snapbox.yml
@@ -7,5 +7,5 @@ city: Horn Lake
 street: Goodman Road West
 housenumber: "1634"
 phone: ""
-opening_hours: ""
+opening_hours: 24/7
 website: https://snapboxselfstorage.com/facility/Horn-Lake-MS/Snapbox-Goodman-Rd-29758.html
