update content and data

--- a/data/cities/oxford/sherwin-williams.yml
+++ b/data/cities/oxford/sherwin-williams.yml
@@ -1,11 +1,11 @@
-id: 270367464
+id: 12346211961
 type: node
-latitude: 34.36462
-longitude: -89.55712
+latitude: 34.38684
+longitude: -89.50021
 postcode: "38655"
 city: Oxford
-street: Jackson Avenue West
-housenumber: "1905"
+street: James Kimmons Drive
+housenumber: "1681"
 phone: ""
 opening_hours: ""
 website: ""
