--- a/data/cities/meridian/walmart-supercenter.yml
+++ b/data/cities/meridian/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 1068089290
+id: 1085622946
 type: node
-latitude: 32.38712
-longitude: -88.7492
-postcode: "39307"
+latitude: 32.35476
+longitude: -88.68417
+postcode: "39301"
 city: Meridian
-street: Highway 19 North
-housenumber: "2400"
-phone: +1 601-482-0425
-opening_hours: Mo-Su 06:00-24:00
-website: https://www.walmart.com/store/1271-meridian-ms
+street: 2nd Street South
+housenumber: "1733"
+phone: +1 601-485-2250
+opening_hours: 24/7
+website: https://www.walmart.com/store/981-meridian-ms
