update content and data

--- a/data/cities/oxford/jack-and-claires-botique.yml
+++ b/data/cities/oxford/jack-and-claires-botique.yml
@@ -1,11 +1,11 @@
-id: 3012512684
+id: 12360429320
 type: node
 latitude: 34.36513
-longitude: -89.5633
+longitude: -89.56381
 postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2317"
-phone: 1 662 234 9930
+phone: ""
 opening_hours: ""
-website: https://www.kinnucans.com/
+website: ""
