--- a/data/cities/oxford/new-york-nails.yml
+++ b/data/cities/oxford/new-york-nails.yml
@@ -1,11 +1,11 @@
-id: 5683171665
+id: 12360429317
 type: node
-latitude: 34.36124
-longitude: -89.56202
+latitude: 34.36338
+longitude: -89.56398
 postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
-housenumber: "2226"
-phone: +1-662-234-0404
+housenumber: "2311"
+phone: ""
 opening_hours: ""
 website: ""
