--- a/data/cities/oxford/shades-sunglasses-and-casual-apparel.yml
+++ b/data/cities/oxford/shades-sunglasses-and-casual-apparel.yml
@@ -1,11 +1,11 @@
-id: 5683080126
+id: 12360429319
 type: node
 latitude: 34.36513
-longitude: -89.56383
+longitude: -89.56335
 postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2317"
-phone: +1-662-234-4527
+phone: ""
 opening_hours: ""
 website: ""
