--- a/data/cities/oxford/vapor-maven.yml
+++ b/data/cities/oxford/vapor-maven.yml
@@ -1,11 +1,11 @@
-id: 5683171665
+id: 12360429314
 type: node
-latitude: 34.36124
-longitude: -89.56202
+latitude: 34.36205
+longitude: -89.56251
 postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
-housenumber: "2226"
-phone: +1-662-234-0404
+housenumber: ""
+phone: ""
 opening_hours: ""
 website: ""
