--- a/data/cities/brandon/capital-city-motors.yml
+++ b/data/cities/brandon/capital-city-motors.yml
@@ -1,11 +1,11 @@
-id: 514590640
+id: 430277398
 type: node
-latitude: 32.2733
-longitude: -89.99017
+latitude: 32.27407
+longitude: -89.9947
 postcode: "39042"
 city: Brandon
 street: West Government Street
-housenumber: "358"
+housenumber: ""
 phone: ""
 opening_hours: ""
 website: ""
