update content and data

--- a/data/cities/jackson/walmart-supercenter.yml
+++ b/data/cities/jackson/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 590000582
+id: 832261421
 type: node
-latitude: 32.18568
-longitude: -90.26555
+latitude: 32.28743
+longitude: -90.26753
 postcode: "39204"
 city: Jackson
 street: Greenway Drive
 housenumber: "2711"
 phone: +1 601-922-3406
 opening_hours: 24/7
-website: https://www.walmart.com/store/6469-byram-ms
+website: https://www.walmart.com/store/903-jackson-ms
