update content and data

--- a/data/cities/brandon/dollar-general.yml
+++ b/data/cities/brandon/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 396767210
+id: 442910749
 type: node
-latitude: 32.3822
-longitude: -90.037
-postcode: "39047"
+latitude: 32.29793
+longitude: -89.9948
+postcode: "39042"
 city: Brandon
-street: Spillway Road
-housenumber: "1905"
+street: Hwy 471
+housenumber: "1042"
 phone: ""
 opening_hours: ""
-website: https://www.dollargeneral.com/store-directory/ms/brandon/8409
+website: https://www.dollargeneral.com/store-directory/ms/brandon/10735
