--- a/data/cities/hattiesburg/keiths-superstore.yml
+++ b/data/cities/hattiesburg/keiths-superstore.yml
@@ -1,11 +1,11 @@
-id: 546213651
+id: 318528816
 type: node
-latitude: 31.36115
-longitude: -89.34991
+latitude: 31.31584
+longitude: -89.41279
 postcode: "39402"
 city: Hattiesburg
-street: US 49
-housenumber: "6750"
-phone: +1 (601) 271-8400
-opening_hours: Mo-Su 05:00-23:59
-website: http://www.keithssuperstores.com/
+street: Old Highway 11
+housenumber: "5331"
+phone: +1 (601) 271-8711
+opening_hours: Mo-Su 05:00-23:00
+website: http://www.keithsuperstore.com/
