--- a/data/cities/hattiesburg/walmart-supercenter-us-49.yml
+++ b/data/cities/hattiesburg/walmart-supercenter-us-49.yml
@@ -7,5 +7,5 @@ city: Hattiesburg
 street: US 49
 housenumber: "5901"
 phone: +1 601-296-6855
-opening_hours: 24/7
-website: https://www.walmart.com/store/2717/hattiesburg-ms/whats-new
+opening_hours: Mo-Su 06:00-23:00
+website: https://www.walmart.com/store/2717/hattiesburg-ms
