--- a/data/cities/tupelo/sams-club.yml
+++ b/data/cities/tupelo/sams-club.yml
@@ -1,11 +1,11 @@
-id: 515625073
+id: 1355111263
 type: node
-latitude: 34.30598
-longitude: -88.70981
-postcode: "38804"
+latitude: 34.3064
+longitude: -88.71062
+postcode: ""
 city: Tupelo
 street: North Gloster Street
 housenumber: "3833"
-phone: +1 662-840-6459
+phone: +1-662-840-6459
 opening_hours: Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00
 website: https://www.samsclub.com/club/tupelo-ms-sams-club/6329
