update content and data

--- a/data/cities/tupelo/tag-truck-service.yml
+++ b/data/cities/tupelo/tag-truck-service.yml
@@ -1,11 +1,11 @@
-id: 10922719063
+id: 1097403876
 type: node
-latitude: 34.31639
-longitude: -88.78819
-postcode: "38804"
+latitude: 34.3168
+longitude: -88.78843
+postcode: ""
 city: Tupelo
 street: McCullough Boulevard
 housenumber: "4600"
-phone: 662-844-3262
+phone: +1-662-844-3262
 opening_hours: Mo-Fr 07:00-18:00; Sa 07:00-15:30
 website: https://www.tntxtruck.com/Locations/Mississippi/Tupelo
