--- a/data/cities/hattiesburg/t-bones-records-and-cafe.yml
+++ b/data/cities/hattiesburg/t-bones-records-and-cafe.yml
@@ -7,5 +7,5 @@ city: Hattiesburg
 street: Hardy Street
 housenumber: "2101"
 phone: +1 (601) 583-0099
-opening_hours: Mo-Fr 07:00-21:00; Sa 08:00-21:00; Su 11:00-21:00
+opening_hours: Mo-Fr 07:00-21:00; Sa 08:00-21:00
 website: https://www.tbonescafe.com/
