--- a/data/cities/tupelo/pegues-funeral-directors.yml
+++ b/data/cities/tupelo/pegues-funeral-directors.yml
@@ -4,7 +4,7 @@ latitude: 34.25875
 longitude: -88.71018
 postcode: "38804"
 city: Tupelo
-street: W Jefferson St
+street: West Jefferson Street
 housenumber: "535"
 phone: (662) 842-4872
 opening_hours: 24/7
