--- a/data/cities/hattiesburg/oreilly-auto-parts.yml
+++ b/data/cities/hattiesburg/oreilly-auto-parts.yml
@@ -1,11 +1,11 @@
-id: 355800249
+id: 654343504
 type: node
-latitude: 31.31543
-longitude: -89.30661
-postcode: "39401"
+latitude: 31.31672
+longitude: -89.4111
+postcode: "39402"
 city: Hattiesburg
-street: Broadway Drive
-housenumber: "304"
-phone: ""
-opening_hours: ""
-website: https://locations.oreillyauto.com/ms/hattiesburg/autoparts-943.html
+street: US 98
+housenumber: "6460"
+phone: +1 (601) 268-3156
+opening_hours: Mo-Sa 07:00-22:00; Su 08:00-20:00
+website: https://locations.oreillyauto.com/ms/hattiesburg/autoparts-1297.html
