--- a/data/cities/clinton/memes-brick-street-bakery.yml
+++ b/data/cities/clinton/memes-brick-street-bakery.yml
@@ -7,5 +7,5 @@ city: Clinton
 street: West Leake Street
 housenumber: "104"
 phone: 601-278-0635
-opening_hours: ""
+opening_hours: Tu-Fr 11:00-17:30; Sa 10:00-15:00
 website: ""
