update content and data

--- a/data/cities/new-albany/pilot.yml
+++ b/data/cities/new-albany/pilot.yml
@@ -2,10 +2,10 @@ id: 236750653
 type: node
 latitude: 34.46777
 longitude: -89.00634
-postcode: ""
+postcode: "38652"
 city: New Albany
-street: Mississippi Highway 15
-housenumber: ""
+street: Mississippi Highway 15 South
+housenumber: "500"
 phone: ""
-opening_hours: ""
+opening_hours: 24/7
 website: ""
