update content and data

--- a/data/cities/hattiesburg/dollar-tree-old-highway-11.yml
+++ b/data/cities/hattiesburg/dollar-tree-old-highway-11.yml
@@ -1,11 +1,11 @@
 id: 654334671
 type: node
-latitude: 31.31149
-longitude: -89.40926
+latitude: 31.31151
+longitude: -89.40925
 postcode: "39402"
 city: Hattiesburg
 street: Old Highway 11
 housenumber: "5266"
-phone: +1 (601) 296-1533
+phone: ""
 opening_hours: Mo-Sa 08:00-21:00; Su 09:00-20:00
-website: http://fredsinc.com/
+website: ""
