--- a/data/cities/hattiesburg/miracle-nails.yml
+++ b/data/cities/hattiesburg/miracle-nails.yml
@@ -1,11 +1,11 @@
-id: 6131469209
+id: 12824309135
 type: node
 latitude: 31.31204
-longitude: -89.41024
+longitude: -89.40984
 postcode: "39402"
 city: Hattiesburg
 street: Old Highway 11
 housenumber: "5266"
-phone: +1 (601) 255-5110
-opening_hours: Mo-We 10:00-21:00; Th-Sa 10:00-22:00
+phone: "+17692236086"
+opening_hours: ""
 website: ""
