--- a/data/cities/starkville/down-to-game.yml
+++ b/data/cities/starkville/down-to-game.yml
@@ -7,5 +7,5 @@ city: Starkville
 street: Lee Boulevard
 housenumber: "418"
 phone: "+16623384998"
-opening_hours: ""
+opening_hours: Mo 13:00-22:00, We 13:00-22:00, Th,Fr 13:00-24:00, Sa,Su 13:00-22:00
 website: ""
