--- a/data/cities/byram/dabbs-cannabis-dispensary.yml
+++ b/data/cities/byram/dabbs-cannabis-dispensary.yml
@@ -4,8 +4,8 @@ latitude: 32.19088
 longitude: -90.27001
 postcode: "39272"
 city: Byram
-street: S Siwell Rd
+street: South Siwell Road
 housenumber: "7215"
-phone: "7693335520"
-opening_hours: 'Mon – Sat :  9 AM–7 PM || Sunday :  10 AM–5 PM'
-website: https://dabbsdispensary.com/shop-dabbs-menu/byram-12/
+phone: ""
+opening_hours: Mo-Sa 09:00-20:00; Su 10:00-17:00
+website: ""
