--- a/data/cities/hattiesburg/sound-advice.yml
+++ b/data/cities/hattiesburg/sound-advice.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: US 98
 housenumber: "6372"
-phone: +1 (601) 261-9988
+phone: +1 (601) 261-9988;+1 (601) 620-4993
 opening_hours: Mo-Fr 08:00-17:00; Sa 08:00-15:00
 website: ""
