update content and data

--- a/data/cities/hattiesburg/circle-k.yml
+++ b/data/cities/hattiesburg/circle-k.yml
@@ -1,11 +1,11 @@
-id: 654581072
+id: 542693914
 type: node
-latitude: 31.32268
-longitude: -89.36409
+latitude: 31.2567
+longitude: -89.33843
 postcode: "39402"
 city: Hattiesburg
-street: Hardy Street
-housenumber: "4904"
-phone: +1 (601) 268-1073
+street: US 11
+housenumber: "4050"
+phone: ""
 opening_hours: 24/7
 website: ""
