update content and data

--- a/data/cities/oxford/your-extra-closet.yml
+++ b/data/cities/oxford/your-extra-closet.yml
@@ -1,11 +1,11 @@
-id: 5775466475
+id: 5703264967
 type: node
-latitude: 34.39028
-longitude: -89.54937
+latitude: 34.33388
+longitude: -89.51239
 postcode: "38655"
 city: Oxford
-street: ""
-housenumber: "77"
+street: Industrial Park Drive
+housenumber: "8"
 phone: ""
 opening_hours: ""
 website: ""
