--- a/data/cities/indianola/double-quick.yml
+++ b/data/cities/indianola/double-quick.yml
@@ -1,11 +1,11 @@
-id: 1111798070
+id: 1109174108
 type: node
-latitude: 33.43871
-longitude: -90.64321
+latitude: 33.45764
+longitude: -90.65122
 postcode: "38751"
 city: Indianola
-street: B B King Road
-housenumber: "1114"
+street: US 82 West
+housenumber: "103"
 phone: ""
 opening_hours: ""
 website: ""
