--- a/data/cities/biloxi/express-with-class-six.yml
+++ b/data/cities/biloxi/express-with-class-six.yml
@@ -6,6 +6,6 @@ postcode: "39534"
 city: Biloxi
 street: ""
 housenumber: ""
-phone: +1 (228) 432-2404
+phone: +1 228-432-2404
 opening_hours: Mo-Fr 06:00-22:00; Sa 08:00-19:00; Su 10:00-18:00
 website: ""
