--- a/data/cities/oxford/ashley.yml
+++ b/data/cities/oxford/ashley.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2128"
-phone: +1 662 234 7711
+phone: ""
 opening_hours: ""
-website: https://www.johnsonsfurnitureonline.com/index.html
+website: ""
