--- a/data/cities/oxford/harbor-freight.yml
+++ b/data/cities/oxford/harbor-freight.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2128"
-phone: +1-662-234-5993
+phone: ""
 opening_hours: ""
-website: https://www.campusbookmart.net/cbmoxford/
+website: ""
