--- a/data/cities/biloxi/walmart-neighborhood-market.yml
+++ b/data/cities/biloxi/walmart-neighborhood-market.yml
@@ -1,11 +1,11 @@
-id: 4507533619
+id: 5315597987
 type: node
-latitude: 30.40396
-longitude: -88.95841
-postcode: "39531"
+latitude: 30.44433
+longitude: -88.94421
+postcode: "39532"
 city: Biloxi
-street: Pass Road
-housenumber: "2050"
-phone: +1 228-271-6723
+street: Popps Ferry Road
+housenumber: "1820"
+phone: +1 228-271-6082
 opening_hours: Mo-Su 06:00-23:00
-website: https://www.walmart.com/store/6849-biloxi-ms
+website: https://www.walmart.com/store/4586/biloxi-ms
