update content and data

--- a/data/cities/glucksadt/bicycle-revolution.yml
+++ b/data/cities/glucksadt/bicycle-revolution.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Glucksadt
 street: Dee Drive, Suite C
 housenumber: "113"
-phone: 769.300.4721
+phone: +1 769-300-4721
 opening_hours: ""
 website: https://startarevolution.net/
