--- a/data/cities/laurel/carter-motorcars.yml
+++ b/data/cities/laurel/carter-motorcars.yml
@@ -6,6 +6,6 @@ postcode: "39440"
 city: Laurel
 street: South 16th Avenue
 housenumber: "115"
-phone: 601 428 8400
+phone: +1 601-428-8400
 opening_hours: Mo-Fr 08:00-18:00
 website: https://cartermotorcars.com/
