--- a/data/cities/tupelo/becker-hearing-center.yml
+++ b/data/cities/tupelo/becker-hearing-center.yml
@@ -6,6 +6,6 @@ postcode: "38801"
 city: Tupelo
 street: West Main Street
 housenumber: ""
-phone: 662-842-6325
+phone: +1 662-842-6325
 opening_hours: Mo-Th 08:30-16:30,Fr 08:30-12:00
 website: https://beckerhearing.com
