--- a/data/cities/buckatunna/buckatunna-grocery.yml
+++ b/data/cities/buckatunna/buckatunna-grocery.yml
@@ -6,6 +6,6 @@ postcode: "39322"
 city: Buckatunna
 street: US 45
 housenumber: "1708"
-phone: +1 (601) 648-2234
+phone: +1 601-648-2234
 opening_hours: ""
 website: ""
