--- a/data/cities/hattiesburg/aamco-transmission.yml
+++ b/data/cities/hattiesburg/aamco-transmission.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: West Pine Street
 housenumber: "2101"
-phone: +1 (601) 264-4500
+phone: +1 601-264-4500
 opening_hours: Mo-Fr 08:00-17:00
 website: https://www.aamco.com/centerinfo.asp?centerNum=6012644500
