--- a/data/cities/hattiesburg/academy-sports-outdoors.yml
+++ b/data/cities/hattiesburg/academy-sports-outdoors.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: US 98
 housenumber: "6173"
-phone: +1 (601) 261-2900
+phone: +1 601-261-2900
 opening_hours: Su-Th 08:00-23:00; Fr-Sa 07:00-23:59
 website: https://www.academy.com/shop/storelocator/ms/hattiesburg/store-0108
