--- a/data/cities/hattiesburg/audibel.yml
+++ b/data/cities/hattiesburg/audibel.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3901"
-phone: +1 (601) 261-5995
+phone: +1 601-261-5995
 opening_hours: ""
 website: https://www.audibel.com/
