--- a/data/cities/hattiesburg/awa-beauty-supply.yml
+++ b/data/cities/hattiesburg/awa-beauty-supply.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: ""
-phone: +1 (601) 212-2579
+phone: +1 601-212-2579
 opening_hours: ""
 website: ""
