--- a/data/cities/hattiesburg/b-kwik.yml
+++ b/data/cities/hattiesburg/b-kwik.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: US 98
 housenumber: "9290"
-phone: +1 (601) 336-5673
+phone: +1 601-336-5673
 opening_hours: ""
 website: https://find.shell.com/us/fuel/12593770-6290-us-highway-98/en_US
