--- a/data/cities/hattiesburg/beauty-first.yml
+++ b/data/cities/hattiesburg/beauty-first.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: "2609"
-phone: +1 (601) 336-5121
+phone: +1 601-336-5121
 opening_hours: Mo-Sa 08:30-19:00
 website: ""
