--- a/data/cities/hattiesburg/breadsmith.yml
+++ b/data/cities/hattiesburg/breadsmith.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3705"
-phone: (601) 268-0330
+phone: +1 601-268-0330
 opening_hours: ""
 website: ""
