--- a/data/cities/hattiesburg/c-spire-us-49.yml
+++ b/data/cities/hattiesburg/c-spire-us-49.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: US 49
 housenumber: "5910"
-phone: +1 (855) 277-4735
+phone: +1 855-277-4735
 opening_hours: Mo-Sa 09:00-19:00
 website: https://www.cspire.com/cms/stores/200095/South-Hattiesburg/
