--- a/data/cities/laurel/advance-auto-parts.yml
+++ b/data/cities/laurel/advance-auto-parts.yml
@@ -6,6 +6,6 @@ postcode: "39440"
 city: Laurel
 street: North 16th Avenue
 housenumber: "132"
-phone: 601 428 8270
+phone: +1 601-428-8270
 opening_hours: ""
 website: https://stores.advanceautoparts.com
