--- a/data/cities/meridian/any-time-any-kind-storage.yml
+++ b/data/cities/meridian/any-time-any-kind-storage.yml
@@ -6,6 +6,6 @@ postcode: "39301"
 city: Meridian
 street: MS 145
 housenumber: ""
-phone: +1 (601) 693-5851
+phone: +1 601-693-5851
 opening_hours: ""
 website: ""
