--- a/data/cities/meridian/brandon-express.yml
+++ b/data/cities/meridian/brandon-express.yml
@@ -6,6 +6,6 @@ postcode: "39301"
 city: Meridian
 street: 22nd Avenue Heights
 housenumber: "1201"
-phone: +1 (601) 693-6866
+phone: +1 601-693-6866
 opening_hours: Mo-Su 06:00-23:00
 website: https://www.exxon.com/en/find-station/meridian-ms-brandonexpress-200316934
