--- a/data/cities/oxford/belk.yml
+++ b/data/cities/oxford/belk.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2319"
-phone: 1 662 281 1378
+phone: +1 662-281-1378
 opening_hours: ""
 website: ""
