--- a/data/cities/oxford/car-mart-of-oxford.yml
+++ b/data/cities/oxford/car-mart-of-oxford.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2612"
-phone: 1 662 259 8040
+phone: +1 662-259-8040
 opening_hours: ""
 website: https://www.car-mart.com/
