--- a/data/cities/southaven/3rd-generation-tire-and-service.yml
+++ b/data/cities/southaven/3rd-generation-tire-and-service.yml
@@ -6,6 +6,6 @@ postcode: "38671"
 city: Southaven
 street: Highway 51 N
 housenumber: "9070"
-phone: 662-393-9433
+phone: +1 662-393-9433
 opening_hours: ""
 website: https://3rdgenerationtireandservice.com/
