update content and data

--- a/data/cities/biloxi/main-exchange.yml
+++ b/data/cities/biloxi/main-exchange.yml
@@ -6,6 +6,6 @@ postcode: "39534"
 city: Biloxi
 street: Larcher Boulevard
 housenumber: "506"
-phone: +1 (228) 435-2524
+phone: +1 228-435-2524
 opening_hours: Mo-Sa 09:00-19:00; Su 10:00-17:00
 website: https://www.shopmyexchange.com/exchange-stores/United%20States/MS/Biloxi/Keesler-Main-Exchange-1032749
