--- a/data/cities/hattiesburg/hall-avenue-liquor-store.yml
+++ b/data/cities/hattiesburg/hall-avenue-liquor-store.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: Hall Avenue
 housenumber: "108"
-phone: +1 (601) 582-0349
+phone: +1-601-582-0349
 opening_hours: Mo-Sa 10:00-22:00
 website: ""
