--- a/data/cities/hattiesburg/the-shop-downtown.yml
+++ b/data/cities/hattiesburg/the-shop-downtown.yml
@@ -6,7 +6,7 @@ postcode: "39401"
 city: Hattiesburg
 street: East Pine Street
 housenumber: "121"
-phone: +1 (601) 408-9820
+phone: +1-601-408-9820
 opening_hours: Tu-We 11:00-21:00; Th 11:00-22:00; Fr 11:00-24:00; Sa 10:00-21:00;
     Su 12:00-17:00
 website: http://theshopdowntown.org
