--- a/data/cities/oxford/lbs-meat-market.yml
+++ b/data/cities/oxford/lbs-meat-market.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: University Avenue
 housenumber: "2008"
-phone: 662-259-2999
+phone: +1 662-259-2999
 opening_hours: ""
 website: ""
