--- a/data/cities/oxford/magnolia-lighting.yml
+++ b/data/cities/oxford/magnolia-lighting.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2206"
-phone: 1 662 236 0025
+phone: +1 662-236-0025
 opening_hours: ""
 website: https://magnolialighting.com/
