--- a/data/cities/oxford/peggys-specialty-alterations.yml
+++ b/data/cities/oxford/peggys-specialty-alterations.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: North Lamar Boulevard
 housenumber: "1114"
-phone: 1 662 236 2634
+phone: +1 662-236-2634
 opening_hours: ""
 website: ""
