--- a/data/cities/ridgeland/reeds-jewelers-northpark-mall.yml
+++ b/data/cities/ridgeland/reeds-jewelers-northpark-mall.yml
@@ -6,6 +6,6 @@ postcode: "39157"
 city: Ridgeland
 street: East County Line Road
 housenumber: "1200"
-phone: (601) 956-0088
+phone: +1 601-956-0088
 opening_hours: ""
 website: https://www.reeds.com/
