--- a/data/cities/columbus/reeds-jewelers.yml
+++ b/data/cities/columbus/reeds-jewelers.yml
@@ -6,6 +6,6 @@ postcode: "39701"
 city: Columbus
 street: Old Aberdeen Road
 housenumber: "1404"
-phone: (662) 328-3938
+phone: +1 662-328-3938
 opening_hours: ""
 website: https://www.reeds.com/
