--- a/data/cities/hattiesburg/clan-of-the-red-clawa.yml
+++ b/data/cities/hattiesburg/clan-of-the-red-clawa.yml
@@ -6,7 +6,7 @@ postcode: "39401"
 city: Hattiesburg
 street: East Pine Street
 housenumber: "119"
-phone: +1 (601) 325-8709
+phone: +1-601-325-8709
 opening_hours: Mo 13:00-21:00; Su 15:00-21:00; We 13:00-21:00; Th 15:00-21:00; Fr-Sa
     13:00-21:00
 website: ""
