--- a/data/cities/hattiesburg/corner-market.yml
+++ b/data/cities/hattiesburg/corner-market.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3720"
-phone: +1 (601) 264-3425
+phone: +1 601-264-3425
 opening_hours: Mo-Su 07:00-22:00
 website: https://www.cornermarketms.com/
