--- a/data/cities/hattiesburg/dannys-grocery-and-deli.yml
+++ b/data/cities/hattiesburg/dannys-grocery-and-deli.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: Hall Avenue
 housenumber: "100"
-phone: +1 (601) 583-0201
+phone: +1-601-583-0201
 opening_hours: ""
 website: ""
