--- a/data/cities/hattiesburg/eye-works.yml
+++ b/data/cities/hattiesburg/eye-works.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3901"
-phone: +1 (601) 261-2221
+phone: +1-601-261-2221
 opening_hours: Mo-Fr 09:00-17:30
 website: https://www.eyeworkshattiesburg.com/
