--- a/data/cities/hattiesburg/fastmart.yml
+++ b/data/cities/hattiesburg/fastmart.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Hattiesburg
 street: Broadway Drive
 housenumber: "1801"
-phone: +1 (601) 268-0845
+phone: +1-601-268-0845
 opening_hours: ""
 website: ""
