--- a/data/cities/hattiesburg/floyds-formals.yml
+++ b/data/cities/hattiesburg/floyds-formals.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: "4219"
-phone: +1 (601) 264-3694
+phone: +1-601-264-3694
 opening_hours: Mo-Fr 09:00-17:00; Sa 08:00-12:00
 website: https://www.floydsformalshattiesburg.com/
