--- a/data/cities/hattiesburg/go-young-fashion.yml
+++ b/data/cities/hattiesburg/go-young-fashion.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: East Pine Street
 housenumber: "125"
-phone: +1 (601) 582-5657
+phone: +1-601-582-5657
 opening_hours: Mo-Th 09:00-18:00; Fr 09:30-18:00; Sa 09:00-18:00
 website: ""
