--- a/data/cities/hattiesburg/heritage-firearms.yml
+++ b/data/cities/hattiesburg/heritage-firearms.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Old Highway 11
 housenumber: "5295"
-phone: +1 (601) 255-5879
+phone: +1-601-255-5879
 opening_hours: Mo-Tu 09:00-17:30; We 09:00-14:00; Th-Fr 09:00-17:30; Sa 09:00-17:00
 website: https://www.heritagefirearmsinc.com/
