--- a/data/cities/hattiesburg/infinity-bicycles.yml
+++ b/data/cities/hattiesburg/infinity-bicycles.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "4700"
-phone: +1 (601) 264-9399
+phone: +1 601-264-9399
 opening_hours: Mo-Fr 10:00-18:00; Sa 10:00-16:00; Su 12:00-16:00
 website: http://www.infinity-bicycles.com/
