--- a/data/cities/hattiesburg/lavish-beaute-and-nail-bar.yml
+++ b/data/cities/hattiesburg/lavish-beaute-and-nail-bar.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3002"
-phone: +1 (601) 255-5998
+phone: +1-601-255-5998
 opening_hours: ""
 website: ""
