--- a/data/cities/hattiesburg/liberty-spirits.yml
+++ b/data/cities/hattiesburg/liberty-spirits.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Old Highway 11
 housenumber: "5266"
-phone: +1 (601) 255-5110
+phone: +1-601-255-5110
 opening_hours: Mo-We 10:00-21:00; Th-Sa 10:00-22:00
 website: ""
