--- a/data/cities/hattiesburg/moores-bike-shop.yml
+++ b/data/cities/hattiesburg/moores-bike-shop.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "1607"
-phone: +1 (601) 544-1978
+phone: +1 601-544-1978
 opening_hours: Mo-Fr 09:00-18:00; Sa 09:00-16:00
 website: https://www.mooresbikes.com/
