--- a/data/cities/hattiesburg/randy-price-and-company.yml
+++ b/data/cities/hattiesburg/randy-price-and-company.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: US 98
 housenumber: "6156"
-phone: +1 (601) 264-9454
+phone: +1-601-264-9454
 opening_hours: Mo-Fr 10:00-18:00; Sa 10:00-15:00
 website: https://randypriceandcompany.com/
