--- a/data/cities/hattiesburg/reeds-jewelers.yml
+++ b/data/cities/hattiesburg/reeds-jewelers.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Turtle Creek Dr.
 housenumber: "1000"
-phone: (601) 268-6204
+phone: +1 601-268-6204
 opening_hours: ""
 website: https://www.reeds.com/
