--- a/data/cities/hattiesburg/southern-fried-comics.yml
+++ b/data/cities/hattiesburg/southern-fried-comics.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: East Front Street
 housenumber: "136"
-phone: +1 (601) 329-4127
+phone: +1-601-329-4127
 opening_hours: We 10:00-19:00; Th-Sa 11:00-19:00; Su 12:00-17:00
 website: https://www.southernfriedcomics.com/
