--- a/data/cities/hattiesburg/sprint.yml
+++ b/data/cities/hattiesburg/sprint.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3901"
-phone: +1 (601) 450-1644
+phone: +1-601-450-1644
 opening_hours: Mo-Sa 10:00-20:00; Su 12:00-18:00
 website: https://www.sprint.com/storefronts/bd/sprint-hattiesburg-ms-39402-d-235453/
