--- a/data/cities/hattiesburg/taylor-rental.yml
+++ b/data/cities/hattiesburg/taylor-rental.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: "4219"
-phone: +1 (601) 261-5060
+phone: +1-601-261-5060
 opening_hours: Mo-Fr 07:30-17:00; Sa 07:30-12:00
 website: https://taylor-rental-hattiesburg.com/
