--- a/data/cities/hattiesburg/the-donut-grove.yml
+++ b/data/cities/hattiesburg/the-donut-grove.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Old Highway 11
 housenumber: "5180"
-phone: +1 (601) 264-3111
+phone: +1-601-264-3111
 opening_hours: Mo-Fr 05:30-14:00; Sa-Su 05:30-12:00
 website: ""
