--- a/data/cities/hattiesburg/the-oak-barrell-wine-and-spirits.yml
+++ b/data/cities/hattiesburg/the-oak-barrell-wine-and-spirits.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3901"
-phone: +1 (601) 296-1733
+phone: +1-601-296-1733
 opening_hours: Mo-Sa 10:00-22:00
 website: ""
