--- a/data/cities/hattiesburg/ultimate-nails.yml
+++ b/data/cities/hattiesburg/ultimate-nails.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3901"
-phone: +1 (601) 296-1447
+phone: +1-601-296-1447
 opening_hours: Mo-Fr 09:00-19:00; Sa 09:00-18:00
 website: ""
