--- a/data/cities/jackson/discount-car-audio.yml
+++ b/data/cities/jackson/discount-car-audio.yml
@@ -6,6 +6,6 @@ postcode: "39204"
 city: Jackson
 street: US-80
 housenumber: "1510"
-phone: 601-969-3100
+phone: +1 601-969-3100
 opening_hours: ""
 website: http://discountcaraudioms.com
