--- a/data/cities/madison/mystic-nails-salon-and-spa.yml
+++ b/data/cities/madison/mystic-nails-salon-and-spa.yml
@@ -6,6 +6,6 @@ postcode: "39110"
 city: Madison
 street: 'Grandview Blvd #430'
 housenumber: "175"
-phone: 601-898-0881
+phone: +1 601-898-0881
 opening_hours: ""
 website: http://mysticnailssalon.com
