--- a/data/cities/meridian/dollar-general.yml
+++ b/data/cities/meridian/dollar-general.yml
@@ -6,6 +6,6 @@ postcode: "39301"
 city: Meridian
 street: Mitchum Bottom Road
 housenumber: "89"
-phone: +1 (601) 482-2603
+phone: +1-601-482-2603
 opening_hours: Mo-Su 07:00-22:00
 website: https://www.dollargeneral.com/store-directory/ms/meridian/18600
