--- a/data/cities/meridian/reeds-jewelers.yml
+++ b/data/cities/meridian/reeds-jewelers.yml
@@ -6,6 +6,6 @@ postcode: "39301"
 city: Meridian
 street: Bonita Lakes Circle
 housenumber: "1150"
-phone: (601) 693-7884
+phone: +1 601-693-7884
 opening_hours: ""
 website: https://www.reeds.com/
