--- a/data/cities/oxford/gnc.yml
+++ b/data/cities/oxford/gnc.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2214"
-phone: 1 662 234 5687
+phone: +1 662-234-5687
 opening_hours: ""
 website: https://www.gnc.com/home/index.jsp
