--- a/data/cities/oxford/goodwill.yml
+++ b/data/cities/oxford/goodwill.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2540"
-phone: 1 662 513 6458
+phone: +1 662-513-6458
 opening_hours: ""
 website: https://www.goodwill.org/
