--- a/data/cities/oxford/hollywood-feed.yml
+++ b/data/cities/oxford/hollywood-feed.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2210"
-phone: 1 662 638 0435
+phone: +1 662-638-0435
 opening_hours: ""
 website: https://www.hollywoodfeed.com/
