--- a/data/cities/oxford/rebel-rags.yml
+++ b/data/cities/oxford/rebel-rags.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "2302"
-phone: 1 662 234 7247
+phone: +1 662-234-7247
 opening_hours: ""
 website: https://www.rebelrags.net/
