--- a/data/cities/tupelo/pegues-funeral-directors.yml
+++ b/data/cities/tupelo/pegues-funeral-directors.yml
@@ -6,6 +6,6 @@ postcode: "38804"
 city: Tupelo
 street: West Jefferson Street
 housenumber: "535"
-phone: (662) 842-4872
+phone: +1 662-842-4872
 opening_hours: 24/7
 website: https://www.peguesfuneralhome.com/
