--- a/data/cities/tupelo/reeds-jewelers.yml
+++ b/data/cities/tupelo/reeds-jewelers.yml
@@ -6,6 +6,6 @@ postcode: "38804"
 city: Tupelo
 street: Barnes Crossing Rd
 housenumber: "1001"
-phone: (662) 844-2431
+phone: +1 662-844-2431
 opening_hours: ""
 website: https://www.reeds.com/
