update content and data

--- a/data/cities/biloxi/coastal-capital-dispensary.yml
+++ b/data/cities/biloxi/coastal-capital-dispensary.yml
@@ -6,6 +6,6 @@ postcode: "39531"
 city: Biloxi
 street: Debuys Road
 housenumber: "232"
-phone: 228-967-7029
+phone: +1-228-967-7029
 opening_hours: Mo-Sa 09:00-18:00; Su closed
 website: https://coastalcapitaldispensary.com/
