--- a/data/cities/columbus/slick-kustomz.yml
+++ b/data/cities/columbus/slick-kustomz.yml
@@ -6,6 +6,6 @@ postcode: "39702"
 city: Columbus
 street: Shepherd Road
 housenumber: "1522"
-phone: "6628890993"
+phone: +1-662-889-0993
 opening_hours: 24/7
 website: ""
