--- a/data/cities/flowood/lakeland-fireplace.yml
+++ b/data/cities/flowood/lakeland-fireplace.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Flowood
 street: Lakeland Drive
 housenumber: "5310"
-phone: (601)919-1560
+phone: +1-601-919-1560
 opening_hours: ""
 website: https://lakelandfireplaces.net
