--- a/data/cities/gluckstadt/sullivans.yml
+++ b/data/cities/gluckstadt/sullivans.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Gluckstadt
 street: Calhoun Station Parkway
 housenumber: "155"
-phone: +1-(601) 521-1202
+phone: +1-601-521-1202
 opening_hours: Mo-Su 07:00-21:00
 website: ""
