--- a/data/cities/greenville/tobacco-and-vape-plus.yml
+++ b/data/cities/greenville/tobacco-and-vape-plus.yml
@@ -6,6 +6,6 @@ postcode: "38701"
 city: Greenville
 street: MS-1
 housenumber: "1832"
-phone: 662-702-3293
+phone: +1-662-702-3293
 opening_hours: Mo-Su 09:00-21:00
 website: https://tobaccovapeplus.com
