--- a/data/cities/grenada/kirk-toyota.yml
+++ b/data/cities/grenada/kirk-toyota.yml
@@ -6,6 +6,6 @@ postcode: "38901"
 city: Grenada
 street: SW Frontage Road
 housenumber: "237"
-phone: "6622261181"
+phone: +1-662-226-1181
 opening_hours: Mon-Fri 8a-6p; Saturday 8a-5p
 website: ""
