--- a/data/cities/gulfport/henrys-pet-grooming-plus.yml
+++ b/data/cities/gulfport/henrys-pet-grooming-plus.yml
@@ -6,6 +6,6 @@ postcode: "39501"
 city: Gulfport
 street: Pass Road
 housenumber: "1220"
-phone: "2282249716"
+phone: +1-228-224-9716
 opening_hours: ""
 website: https://www.petgroomerfinder.com/salon/henrys-pet-grooming-plus
