--- a/data/cities/hattiesburg/cooks-barber-shop.yml
+++ b/data/cities/hattiesburg/cooks-barber-shop.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3720"
-phone: +1 (601) 264-7803
+phone: +1-601-264-7803
 opening_hours: Mo-Fr 7:00-16:30
 website: ""
