--- a/data/cities/leakesville/dollar-general.yml
+++ b/data/cities/leakesville/dollar-general.yml
@@ -6,6 +6,6 @@ postcode: "39451"
 city: Leakesville
 street: Main Street
 housenumber: "710"
-phone: +1 (601) 394-4934
+phone: +1-601-394-4934
 opening_hours: Mo-Su 07:00-22:00
 website: https://www.dollargeneral.com/store-directory/ms/leakesville/7147
