--- a/data/cities/mendenhall/dabbs-cannabis-dispensary.yml
+++ b/data/cities/mendenhall/dabbs-cannabis-dispensary.yml
@@ -6,6 +6,6 @@ postcode: "39114"
 city: Mendenhall
 street: Simpson Hwy 149
 housenumber: "1510"
-phone: 601-675-1240
+phone: +1-601-675-1240
 opening_hours: Mo-Sa 09:00-19:00
 website: https://www.dabbscannabisdispensary.com/
