--- a/data/cities/oxford/hybrid-cbd.yml
+++ b/data/cities/oxford/hybrid-cbd.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Ave W
 housenumber: "1801"
-phone: 662-380-5310
+phone: +1-662-380-5310
 opening_hours: Mo-Su 10:30-19:00
 website: https://hybridcbdms.com/
