--- a/data/cities/oxford/hybrid-relief-medical-dispensary.yml
+++ b/data/cities/oxford/hybrid-relief-medical-dispensary.yml
@@ -6,6 +6,6 @@ postcode: "38655"
 city: Oxford
 street: Jackson Avenue West
 housenumber: "1801"
-phone: 662-380-5013
+phone: +1-662-380-5013
 opening_hours: Mo-Sa 09:00-20:00; Su 12:00-20:00
 website: https://www.hybridreliefms.com/
