--- a/data/cities/pearl/hair-station.yml
+++ b/data/cities/pearl/hair-station.yml
@@ -6,6 +6,6 @@ postcode: "39208"
 city: Pearl
 street: U.S. Highway 80
 housenumber: "3560"
-phone: 601-939-6249
+phone: +1-601-939-6249
 opening_hours: ""
 website: ""
