--- a/data/cities/richton/rameys.yml
+++ b/data/cities/richton/rameys.yml
@@ -6,6 +6,6 @@ postcode: "39476"
 city: Richton
 street: North Front Street
 housenumber: "701"
-phone: +1 (601) 788-9616
+phone: +1-601-788-9616
 opening_hours: Mo-Sa 07:00-21:00; Su 07:00-20:00
 website: https://www.rameysmarketplace.com/
