--- a/data/cities/ridgeland/indian-cycle.yml
+++ b/data/cities/ridgeland/indian-cycle.yml
@@ -6,6 +6,6 @@ postcode: "39157"
 city: Ridgeland
 street: s. Pear Orchard Rd
 housenumber: "677"
-phone: 601.956.8383
+phone: +1-601-956-8383
 opening_hours: ""
 website: https://www.indiancyclefitness.com/
