--- a/data/cities/saltillo/pegues-funeral-directors.yml
+++ b/data/cities/saltillo/pegues-funeral-directors.yml
@@ -6,6 +6,6 @@ postcode: "38866"
 city: Saltillo
 street: Mobile St
 housenumber: "280"
-phone: (662) 869-2130
+phone: +1-662-869-2130
 opening_hours: 24/7
 website: https://www.peguesfuneralhome.com/about-us/tour-our-facilities?explore=1893764
