--- a/data/cities/southaven/discount-wine-and-liquor.yml
+++ b/data/cities/southaven/discount-wine-and-liquor.yml
@@ -6,6 +6,6 @@ postcode: "38671"
 city: Southaven
 street: Airways Boulevard
 housenumber: "8946"
-phone: "6622538654"
+phone: +1-662-253-8654
 opening_hours: ""
 website: ""
