--- a/data/cities/water-valley/violet-valley.yml
+++ b/data/cities/water-valley/violet-valley.yml
@@ -6,6 +6,6 @@ postcode: "39865"
 city: Water Valley
 street: North Main Street
 housenumber: "303"
-phone: +1 (662) 506-2750
+phone: +1-662-506-2750
 opening_hours: ""
 website: https://www.violetvalley.org
