--- a/data/cities/beaumont/greers-cash-saver.yml
+++ b/data/cities/beaumont/greers-cash-saver.yml
@@ -6,6 +6,6 @@ postcode: "39423"
 city: Beaumont
 street: MS 198
 housenumber: "881"
-phone: +1 (601) 784-2213
+phone: +1-601-784-2213
 opening_hours: Mo-Su 07:00-20:00
 website: https://www.greers.com/
