--- a/data/cities/biloxi/keesler-outdoor-recreation-and-marina-park.yml
+++ b/data/cities/biloxi/keesler-outdoor-recreation-and-marina-park.yml
@@ -6,6 +6,6 @@ postcode: "39534"
 city: Biloxi
 street: Marina Drive
 housenumber: "625"
-phone: +1 (228) 377-3160
+phone: +1-228-377-3160
 opening_hours: 10:00-18:00
 website: https://www.discoverkeesler.com/outdoor-recreation
