--- a/data/cities/brandon/ridesouth.yml
+++ b/data/cities/brandon/ridesouth.yml
@@ -6,6 +6,6 @@ postcode: "39047"
 city: Brandon
 street: Avalon Court
 housenumber: "105"
-phone: 601-992-2490
+phone: +1-601-992-2490
 opening_hours: ""
 website: ""
