--- a/data/cities/brookhaven/co-lin-feed-and-seed-llc.yml
+++ b/data/cities/brookhaven/co-lin-feed-and-seed-llc.yml
@@ -6,6 +6,6 @@ postcode: "39601"
 city: Brookhaven
 street: 1232 US Hwy 51 NE
 housenumber: ""
-phone: 601-833-8612
+phone: +1-601-833-8612
 opening_hours: Mo,Tu,Th,Fr 07:00-17:00; We 07:00-13:00; Sa 07:00-12:00
 website: https://colinfeedandseed.com
