--- a/data/cities/collins/honestly-beef.yml
+++ b/data/cities/collins/honestly-beef.yml
@@ -6,6 +6,6 @@ postcode: "39428"
 city: Collins
 street: Cattle Dr
 housenumber: "84"
-phone: 601-299-4202
+phone: +1-601-299-4202
 opening_hours: ""
 website: https://honestlybeef.com/store
