--- a/data/cities/hattiesburg/changing-looks-hair-salon.yml
+++ b/data/cities/hattiesburg/changing-looks-hair-salon.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: "2525"
-phone: +1 (601) 268-1113
+phone: +1-601-268-1113
 opening_hours: Tu 10:00-18:00; We 10:00-16:45; Th-Fr 10:00-18:00; Sa 10:00-15:00
 website: ""
