--- a/data/cities/hattiesburg/corner-fuel-center.yml
+++ b/data/cities/hattiesburg/corner-fuel-center.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: US 49
 housenumber: "3984"
-phone: +1 (601) 544-7527
+phone: +1-601-544-7527
 opening_hours: 24/7
 website: ""
