--- a/data/cities/hattiesburg/eagle-discount-liquor-and-wine.yml
+++ b/data/cities/hattiesburg/eagle-discount-liquor-and-wine.yml
@@ -6,6 +6,6 @@ postcode: "39401"
 city: Hattiesburg
 street: Campbell Loop
 housenumber: "104"
-phone: +1 (601) 579-8638
+phone: +1-601-579-8638
 opening_hours: Mo-Sa 10:00-22:00
 website: ""
