--- a/data/cities/hattiesburg/elder-dragon-games.yml
+++ b/data/cities/hattiesburg/elder-dragon-games.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: "2621"
-phone: +1 (601) 602-4736
+phone: +1-601-602-4736
 opening_hours: Mo-Su 14:00-24:00
 website: ""
