--- a/data/cities/hattiesburg/food-mart.yml
+++ b/data/cities/hattiesburg/food-mart.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: "2624"
-phone: +1 (601) 264-6449
+phone: +1-601-264-6449
 opening_hours: Mo-Su 06:00-22:00
 website: ""
