--- a/data/cities/hattiesburg/genesis-of-hattiesburg.yml
+++ b/data/cities/hattiesburg/genesis-of-hattiesburg.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: US-98
 housenumber: "6412"
-phone: "6016200735"
+phone: +1-601-620-0735
 opening_hours: Mo-Fr 08:30-18:00; Sa 09:00-14:00
 website: ""
