--- a/data/cities/hattiesburg/midtown-market-wine-and-spirits.yml
+++ b/data/cities/hattiesburg/midtown-market-wine-and-spirits.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3720"
-phone: +1 (769) 390-7586
+phone: +1-769-390-7586
 opening_hours: Mo-Sa 10:00-22:00
 website: ""
