--- a/data/cities/hattiesburg/nebletts-frames.yml
+++ b/data/cities/hattiesburg/nebletts-frames.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3906"
-phone: +1 (601) 264-4875
+phone: +1-601-264-4875
 opening_hours: Mo-Fr 10:00-18:00; Sa 10:00-16:00
 website: ""
