--- a/data/cities/hattiesburg/the-experience.yml
+++ b/data/cities/hattiesburg/the-experience.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Lincoln Road
 housenumber: "2525"
-phone: +1 (601) 526-3144
+phone: +1-601-526-3144
 opening_hours: ""
 website: ""
