--- a/data/cities/hattiesburg/the-parlor-at-midtown.yml
+++ b/data/cities/hattiesburg/the-parlor-at-midtown.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Hardy Street
 housenumber: "3720"
-phone: +1 (601) 477-9050
+phone: +1-601-477-9050
 opening_hours: ""
 website: ""
