--- a/data/cities/hattiesburg/turtle-creek-mall.yml
+++ b/data/cities/hattiesburg/turtle-creek-mall.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: Turtle Creek Drive
 housenumber: "1000"
-phone: +1 (601) 261-3032
+phone: +1-601-261-3032
 opening_hours: Mo-Sa 10:00-21:00;Su 12:00-18:00
 website: http://www.turtlecreekmall.com/
