--- a/data/cities/holly-springs/christines-fashion-and-music.yml
+++ b/data/cities/holly-springs/christines-fashion-and-music.yml
@@ -6,6 +6,6 @@ postcode: "38635"
 city: Holly Springs
 street: 239 Martin Luther King Jr Dr
 housenumber: ""
-phone: 662-252-6666
+phone: +1-662-252-6666
 opening_hours: Mo-Sa 10:00-18:00
 website: https://christinesfashionandmusic.biz
