--- a/data/cities/jackson/grocery-depot.yml
+++ b/data/cities/jackson/grocery-depot.yml
@@ -6,6 +6,6 @@ postcode: "39209"
 city: Jackson
 street: Robinson Street
 housenumber: "2526"
-phone: +1 (601) 353-0089
+phone: +1-601-353-0089
 opening_hours: ""
 website: https://grocerydepotms.com
