--- a/data/cities/jackson/kendra-scott.yml
+++ b/data/cities/jackson/kendra-scott.yml
@@ -6,6 +6,6 @@ postcode: "39211"
 city: Jackson
 street: Interstate 55 North
 housenumber: "4500"
-phone: (601) 812-5131
+phone: +1-601-812-5131
 opening_hours: ""
 website: https://kendrascott.com
