--- a/data/cities/jackson/midsouth-hotel-supply.yml
+++ b/data/cities/jackson/midsouth-hotel-supply.yml
@@ -6,6 +6,6 @@ postcode: "39204"
 city: Jackson
 street: Highway 80 West
 housenumber: "2255"
-phone: "8665401212"
+phone: +1-866-540-1212
 opening_hours: Mo-Fr 10:00-18:00
 website: https://www.midsouthhotelsupply.com/
