--- a/data/cities/leakesville/family-dollar.yml
+++ b/data/cities/leakesville/family-dollar.yml
@@ -6,6 +6,6 @@ postcode: "39451"
 city: Leakesville
 street: Main Street
 housenumber: "807"
-phone: +1 (601) 673-3007
+phone: +1-601-673-3007
 opening_hours: Mo-Su 09:00-21:00
 website: https://www.familydollar.com/
