--- a/data/cities/magee/schaub-flooring.yml
+++ b/data/cities/magee/schaub-flooring.yml
@@ -6,6 +6,6 @@ postcode: "39111"
 city: Magee
 street: 114 Simpson Highway 149
 housenumber: ""
-phone: 601-849-3377
+phone: +1-601-849-3377
 opening_hours: Mo-Fr 08:00-17:00
 website: https://schaubflooring.com
