--- a/data/cities/meridian/music-vision.yml
+++ b/data/cities/meridian/music-vision.yml
@@ -6,6 +6,6 @@ postcode: "39307"
 city: Meridian
 street: Old Highway 80 West
 housenumber: "6801"
-phone: 601-482-2737
+phone: +1-601-482-2737
 opening_hours: Mo-Sa 10:00-18:00
 website: https://musicvisionms.com
