--- a/data/cities/meridian/ta.yml
+++ b/data/cities/meridian/ta.yml
@@ -6,6 +6,6 @@ postcode: "39301"
 city: Meridian
 street: Russell Mount Gilead Road
 housenumber: "2150"
-phone: +1 (601) 483-7611
+phone: +1-601-483-7611
 opening_hours: 24/7
 website: ""
