--- a/data/cities/natchez/darbys-fudge-and-gifts.yml
+++ b/data/cities/natchez/darbys-fudge-and-gifts.yml
@@ -6,6 +6,6 @@ postcode: "39120"
 city: Natchez
 street: Main Street
 housenumber: "410"
-phone: 601-446-9737
+phone: +1-601-446-9737
 opening_hours: Mo-Sa 08:00-18:00
 website: https://www.darbysfamousfudge.com
