--- a/data/cities/ovett/dollar-general.yml
+++ b/data/cities/ovett/dollar-general.yml
@@ -6,6 +6,6 @@ postcode: "39464"
 city: Ovett
 street: Ovett-Moselle Road
 housenumber: "3440"
-phone: +1 (601) 651-7417
+phone: +1-601-651-7417
 opening_hours: Mo-Su 08:00-22:00
 website: https://www.dollargeneral.com/store-directory/ms/ovett/22093
