--- a/data/cities/pearl/deep-south-automotive.yml
+++ b/data/cities/pearl/deep-south-automotive.yml
@@ -6,6 +6,6 @@ postcode: "39208"
 city: Pearl
 street: U.S. Highway 80
 housenumber: "3575"
-phone: 601-292-4055
+phone: +1-601-292-4055
 opening_hours: ""
 website: https://deepsouthautomotive.com/
