--- a/data/cities/philadelphia/special-occasions.yml
+++ b/data/cities/philadelphia/special-occasions.yml
@@ -6,6 +6,6 @@ postcode: "39350"
 city: Philadelphia
 street: Holland Avenue
 housenumber: "1034"
-phone: 601-656-7474
+phone: +1-601-656-7474
 opening_hours: Mo-Fr 10:00-17:30, Sa 10:00-15:00
 website: https://specialoccasionsms.com
