--- a/data/cities/philadelphia/twisted-tattoos.yml
+++ b/data/cities/philadelphia/twisted-tattoos.yml
@@ -6,6 +6,6 @@ postcode: "39350"
 city: Philadelphia
 street: County Road 147
 housenumber: "10631"
-phone: +1(601)575-0037
+phone: +1-601-575-0037
 opening_hours: ""
 website: ""
