--- a/data/cities/purvis/health-mart-pharmacy.yml
+++ b/data/cities/purvis/health-mart-pharmacy.yml
@@ -6,6 +6,6 @@ postcode: "39475"
 city: Purvis
 street: US 11
 housenumber: "5796"
-phone: +1 (601) 794-5525
+phone: +1-601-794-5525
 opening_hours: Mo-Fr 08:00-17:30; Sa 09:00-13:00
 website: https://stores.healthmart.com/andersondrugs/
