--- a/data/cities/richland/dabbs-cannabis-dispensary.yml
+++ b/data/cities/richland/dabbs-cannabis-dispensary.yml
@@ -6,6 +6,6 @@ postcode: "39218"
 city: Richland
 street: US 49
 housenumber: "736"
-phone: "7692515096"
+phone: +1-769-251-5096
 opening_hours: Mo-Sa 09:00-19:00; Su closed
 website: https://www.dabbscannabisdispensary.com/richland
