--- a/data/cities/ridgeland/the-bike-crossing.yml
+++ b/data/cities/ridgeland/the-bike-crossing.yml
@@ -6,6 +6,6 @@ postcode: "39157"
 city: Ridgeland
 street: West Jack St, 1-D
 housenumber: "115"
-phone: 601.856.0049
+phone: +1-601-856-0049
 opening_hours: ""
 website: https://www.thebikecrossing.com/
