--- a/data/cities/southaven/grapevine-liquor-and-wine.yml
+++ b/data/cities/southaven/grapevine-liquor-and-wine.yml
@@ -6,6 +6,6 @@ postcode: "38672"
 city: Southaven
 street: 5847 Getwell Rd, A13
 housenumber: ""
-phone: 662-253-8836
+phone: +1-662-253-8836
 opening_hours: Mo-Sa 10:00-22:00
 website: https://grapevineliquorandwine-ms.com
