--- a/data/cities/terry/great-carmania.yml
+++ b/data/cities/terry/great-carmania.yml
@@ -6,6 +6,6 @@ postcode: "39170"
 city: Terry
 street: Davis Rd
 housenumber: "4583"
-phone: 601-374-9592
+phone: +1-601-374-9592
 opening_hours: 24/7
 website: ""
