--- a/data/cities/yazoo-city/davis-feed-and-farm-supply.yml
+++ b/data/cities/yazoo-city/davis-feed-and-farm-supply.yml
@@ -6,6 +6,6 @@ postcode: "39194"
 city: Yazoo City
 street: South Industrial Parkway
 housenumber: "412"
-phone: 662-746-9322
+phone: +1-662-746-9322
 opening_hours: Mo-Tu,Th-Fr 07:00-17:30, We 07:30-17:30, Sa 07:30-13:30
 website: https://davisfeedandfarmsupply.com
