update content and data

--- a/data/cities/columbus/garra-spa.yml
+++ b/data/cities/columbus/garra-spa.yml
@@ -7,5 +7,5 @@ city: Columbus
 street: Hwy 45
 housenumber: "2003"
 phone: +1-662-364-2309
-opening_hours: ""
+opening_hours: Tu-Sa 09:00-18:00
 website: https://garraspams.com/
