update content and data

--- a/data/cities/gulfport/henrys-pet-grooming-plus.yml
+++ b/data/cities/gulfport/henrys-pet-grooming-plus.yml
@@ -7,5 +7,5 @@ city: Gulfport
 street: Pass Road
 housenumber: "1220"
 phone: +1-228-224-9716
-opening_hours: ""
+opening_hours: Mo-Sa 08:00-18:00
 website: https://www.petgroomerfinder.com/salon/henrys-pet-grooming-plus
