update content and data

--- a/data/cities/senatobia/clever-kobold-games.yml
+++ b/data/cities/senatobia/clever-kobold-games.yml
@@ -6,6 +6,6 @@ postcode: "38668"
 city: Senatobia
 street: Front Street
 housenumber: "109"
-phone: ""
-opening_hours: ""
+phone: +1-662-497-1476
+opening_hours: Mo off; Tu-Sa 12:00-22:00; Su 14:00-22:00
 website: ""
