update content and data

--- a/data/cities/jackson/studio-22-elite-piercings-and-tattoos.yml
+++ b/data/cities/jackson/studio-22-elite-piercings-and-tattoos.yml
@@ -8,4 +8,4 @@ street: Highway 80 West
 housenumber: "1900"
 phone: +1-601-291-7214
 opening_hours: Mo-Sa 11:30-21:00
-website: http://www.elitepiercings.tattoo
+website: https://www.elitepiercings.tattoo/
