update content and data

--- a/data/cities/meridian/rogers-florist.yml
+++ b/data/cities/meridian/rogers-florist.yml
@@ -7,5 +7,5 @@ city: Meridian
 street: 10th Street
 housenumber: "2600"
 phone: +1-601-483-4381
-opening_hours: Mo-Fr 09:00-18:00, Sa 09:00-14:00
+opening_hours: Su CLOSED, Mo-Fr 09:00-18:00, Sa 09:00-14:00
 website: https://rogersflorist.org/
