update content and data

--- a/data/cities/clinton/barbershop-therapy.yml
+++ b/data/cities/clinton/barbershop-therapy.yml
@@ -6,6 +6,6 @@ postcode: "39056"
 city: Clinton
 street: US HWY 80
 housenumber: "951"
-phone: +1 601-397-4133
-opening_hours: ""
+phone: +1-601-397-4133
+opening_hours: Su CLOSED, Mo-Sa 08:00-19:00
 website: https://barbershoptherapyllc.com/
