update content and data

--- a/data/cities/meridian/magnolia-baby-3d-4d-ultrasound.yml
+++ b/data/cities/meridian/magnolia-baby-3d-4d-ultrasound.yml
@@ -8,4 +8,4 @@ street: 5th Street
 housenumber: "2211"
 phone: +1 601-621-7854
 opening_hours: Su CLOSED, Mo-Fr 09:00-17:00, Sa 10:00-15:00
-website: https://magnoliababyultrasoundms.com/
+website: http://magnoliababyultrasound.com/
